# fdb

./: .gitignore  Makefile  README.md
FDB/: FDB.hs  GADTForall.hs  TreeDisp.hs
TPCH/Functional/: Schema.hs  q2.hs  q3.hs  q4.hs
TPCH/Relational/: q2.hs
Test/: Main.hs  cffi.h  rffi.rs
doc/: Makefile
doc/design/: design.tex
doc/proto1/: Makefile  fdb_gen_ir.dot  ghcdump_ir.dot  q6_v1.dot  q6_v1.rs
ghc-dumps/: Q1.ddump_ds  Q1.ddump_simpl  Schema.ddump_ds_dsuppress_all  Schema.ddump_hi  Schema.ddump_parsed  Schema.ddump_tc_dsuppress_all  Schema.ddump_tc_fprint_typechecker_elaboration  ghc-dump.sh
hs/: Makefile  patch_hs_dump.sh
hs/FDB/: Undefined.hs  Utils.hs
hs/Test/: cffi.c
misc/fpl_explorations/: fql_bfs1.rs  fql_bfs4.rs
misc/ghc-dumps/: Main.dump-simpl  Q1.ddump_prep  Q1.ddump_tc_fprint_typechecker_elaboration  Schema.ddump_ds  Schema.ddump_parsed_ast  Schema.ddump_rn  Schema.ddump_simpl  Schema.ddump_tc  Schema.ddump_tc_ast  (+1 more)
rs/: Cargo.toml
rs/src/: ctx.rs  data.rs  fql.rs  ghcdump.rs  gpl.rs  hsffi.rs  ir.rs  lib.rs  objstore.rs  tables.rs
rs/src/fql/: backend.rs  comp.rs  hsffi.rs  interpreter.rs  qeval.rs  sqlexec.rs
rs/src/fql/backend/: cri.rs  dci.rs  dri.rs  lmi.rs  sci.rs  sqlexec.rs
rs/src/fql/backend/cri/: qeval.rs
rs/src/fql/backend/dci/: qeval.rs
rs/src/fql/backend/lmi/: dataflow.rs  qeval.rs
rs/src/fql/backend/sci/: dataflow.rs  qeval.rs
rs/src/fql/comp/: dataflow.rs
rs/src/fql/interpreter/: dataflow.rs
rs/src/ghcdump/: convir.rs  files.rs  ir.rs  parser.rs
rs/src/ghcdump/parser/: errpos.rs  fun.rs  typ.rs
(+41 files in other folders)
