[package]
name = "fdb"
version = "0.1.0"
authors = ["Hugo Kapp <hugo.kapp@epfl.ch>"]
edition = "2018"

[lib]
crate-type=["staticlib"]  # Allow linking with foreign languages

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.25.0"
walkdir = "2.3.2"
regex = "1.4.5"
lazy_static = "1.4.0"
